--- a/templates/vehicle_details.html
+++ b/templates/vehicle_details.html
@@ -5,15 +5,15 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-6">
-            <img src="{{ url_for('static', filename='images/' ~ veiculo.imagens.split(',')[0]) }}" alt="Imagem do Veículo"
-                class="img-fluid">
+            <img src="{{ url_for('static', filename='images/' ~ veiculo.imagens.split(',')[0]) }}"
+                alt="Imagem do Veículo" class="img-fluid">
         </div>
         <div class="col-md-6">
             <h1>{{ veiculo.brand }} {{ veiculo.model }}</h1>
             <p>Ano: {{ veiculo.year }}</p>
             <p>Descrição: {{ veiculo.description }}</p>
             <p>Preço por dia: €{{ '%.2f' % veiculo.price_per_day }}</p>
-            <p>Status: {{ veiculo.get_status_display() }}</p>
+            <p>Status: {{ veiculo.status }}</p>
             <div class="mt-4">
                 <a href="{{ url_for('add_to_cart', id=veiculo.id) }}" class="btn btn-primary">Reservar</a>
                 <a href="{{ url_for('checkout', id=veiculo.id) }}" class="btn btn-success">Alugar</a>
