--- a/templates/vehicle_details.html
+++ b/templates/vehicle_details.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             <img src="{{ url_for('static', filename='images/' ~ veiculo.imagens.split(',')[0]) }}"
-                alt="Imagem do Veículo" class="img-fluid">
+                alt="Imagem do Veículo" class="img-fluid" style="max-height: 400px;">
         </div>
         <div class="col-md-6">
             <h1>{{ veiculo.brand }} {{ veiculo.model }}</h1>
