--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    {% if 'client' in session %}
+                    {% if 'user_id' in session %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('client_logout') }}"><i class="fas fa-sign-out-alt"></i> Sair</a>
                     </li>
