--- a/templates/vehicle_details.html
+++ b/templates/vehicle_details.html
@@ -5,6 +5,13 @@
     <div class="row">
         <div class="col-md-6">
             <div id="vehicleCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    {% set image_count = veiculo.imagens.split(',')|length %}
+                    {% for i in range(image_count) %}
+                        <li data-target="#vehicleCarousel" data-slide-to="{{ i }}"
+                            {% if i == 0 %}class="active"{% endif %}></li>
+                    {% endfor %}
+                </ol>
                 <div class="carousel-inner">
                     {% set first_image = true %}
                     {% for image_path in veiculo.imagens.split(',') %}
