--- a/templates/payment_simulation.html
+++ b/templates/payment_simulation.html
@@ -8,6 +8,7 @@
         <div class="col-md-6">
             <h2>{{ veiculo.brand }} {{ veiculo.model }}</h2>
             <p>Data de Recolha: {{ data_recolha }}</p>
+            <p>Hora de Recolha: {{ hora_recolha }}</p>
             <p>Duração do Aluguer: {{ duracao }} dias</p>
             <p>Preço Total: €{{ preco_total }}</p>
         </div>
@@ -37,6 +38,7 @@
                 </div>
                 <input type="hidden" name="veiculo_id" value="{{ veiculo.id }}">
                 <input type="hidden" name="data_recolha" value="{{ data_recolha }}">
+                <input type="hidden" name="hora_recolha" value="{{ hora_recolha }}">
                 <input type="hidden" name="duracao" value="{{ duracao }}">
                 <input type="hidden" name="preco_total" value="{{ preco_total }}">
                 <input type="hidden" name="payment_method" value="mbway">
@@ -50,6 +52,7 @@
                 </div>
                 <input type="hidden" name="veiculo_id" value="{{ veiculo.id }}">
                 <input type="hidden" name="data_recolha" value="{{ data_recolha }}">
+                <input type="hidden" name="hora_recolha" value="{{ hora_recolha }}">
                 <input type="hidden" name="duracao" value="{{ duracao }}">
                 <input type="hidden" name="preco_total" value="{{ preco_total }}">
                 <input type="hidden" name="payment_method" value="mbway">
