estruturando o processo de reservas no banco de dados

--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -36,6 +36,10 @@
             <input type="text" class="form-control" id="nif" name="nif" required>
         </div>
         <div class="mb-3">
+            <label for="price_per_day" class="form-label">Faixa de aluguer desejada</label>
+            <input type="number" step="0.01" class="form-control" id="price_per_day" name="price_per_day" required>
+        </div>
+        <div class="mb-3">
             <label for="password" class="form-label">Palavra-passe</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
