estruturando o processo de reservas no banco de dados

--- a/templates/register_client.html
+++ b/templates/register_client.html
@@ -33,7 +33,7 @@
         </div>
         <div class="mb-3">
             <label for="nif" class="form-label">NIF (Contribuinte Fiscal)</label>
-            <input type="text" class="form-control" id="nif" name="nif" required>
+            <input type="number" class="form-control" id="nif" name="nif" required>
         </div>
         <div class="mb-3">
             <label for="price_per_day" class="form-label">Faixa de aluguer desejada</label>
