--- a/templates/client_reservations.html
+++ b/templates/client_reservations.html
@@ -2,35 +2,71 @@
 {% block content %}
 <div class="row">
     <div class="col-md-6">
-        <h2>Reservas Futuras</h2>
-        <ul class="list-group">
+        <h2 class="text-center">Reservas Futuras</h2>
+        <ul class="list-group list-group-flush">
             {% for reservation in future_reservations %}
             <li class="list-group-item">
-                <strong>Veículo:</strong> {{ reservation.vehicle.brand }} {{ reservation.vehicle.model }}<br>
-                <strong>Recolha do veículo em :</strong> {{ reservation.start_date.strftime('%d/%m/%Y') }} às {{
-                reservation.start_time.strftime('%H:%M') }}<br>
-                <strong>Devolução do veículo em:</strong> {{ reservation.end_date.strftime('%d/%m/%Y') }} às {{
-                reservation.end_time.strftime('%H:%M') }}<br>
-                <strong>Duração total:</strong> {{ reservation.duration }} dia{% if reservation.duration > 0 %}s{%
-                endif%}<br>
-                <strong>Status:</strong> {{ reservation.status }}<br>
+                <div class="row">
+                    <div class="col-md-3">
+                        {% if reservation.vehicle.imagens %}
+                        {% for image_path in reservation.vehicle.imagens.split(',') %}
+                        {% if loop.index <= 1 %} <img src="{{ url_for('static', filename='images/' ~ image_path) }}"
+                            alt="{{ reservation.vehicle.brand }} {{ reservation.vehicle.model }}"
+                            class="img-fluid img-thumbnail rounded" style="max-height: 300px;">
+                            {% endif %}
+                            {% endfor %}
+                            {% endif %}
+                    </div>
+                    <div class="col-md-9">
+                        <strong class="mb-1">Veículo:</strong> {{ reservation.vehicle.brand }} {{
+                        reservation.vehicle.model }}<br>
+                        <strong class="mb-1">Recolha do veículo em:</strong> {{
+                        reservation.start_date.strftime('%d/%m/%Y') }} às {{
+                        reservation.start_time.strftime('%H:%M') }}<br>
+                        <strong class="mb-1">Devolução do veículo em:</strong> {{
+                        reservation.end_date.strftime('%d/%m/%Y') }} às {{
+                        reservation.end_time.strftime('%H:%M') }}<br>
+                        <strong class="mb-1">Duração total:</strong> {{ reservation.duration }} dia{% if
+                        reservation.duration > 0 %}s{%
+                        endif%}<br>
+                        <strong class="mb-1">Status:</strong> {{ reservation.status }}<br>
+                    </div>
+                </div>
             </li>
             {% endfor %}
         </ul>
     </div>
     <div class="col-md-6">
-        <h2>Reservas Passadas</h2>
-        <ul class="list-group">
+        <h2 class="text-center">Reservas Passadas</h2>
+        <ul class="list-group list-group-flush">
             {% for reservation in past_reservations %}
             <li class="list-group-item">
-                <strong>Veículo:</strong> {{ reservation.vehicle.brand }} {{ reservation.vehicle.model }}<br>
-                <strong>Recolha do veículo em :</strong> {{ reservation.start_date.strftime('%d/%m/%Y') }} às {{
-                reservation.start_time.strftime('%H:%M') }}<br>
-                <strong>Devolução do veículo em:</strong> {{ reservation.end_date.strftime('%d/%m/%Y') }} às {{
-                reservation.end_time.strftime('%H:%M') }}<br>
-                <strong>Duração total:</strong> {{ reservation.duration }} dia{% if reservation.duration > 0 %}s{%
-                endif%}<br>
-                <strong>Status:</strong> {{ reservation.status }}<br>
+                <div class="row">
+                    <div class="col-md-3">
+                        {% if reservation.vehicle.imagens %}
+                        {% for image_path in reservation.vehicle.imagens.split(',') %}
+                        {% if loop.index <= 1 %} <img src="{{ url_for('static', filename='images/' ~ image_path) }}"
+                            alt="{{ reservation.vehicle.brand }} {{ reservation.vehicle.model }}"
+                            class="img-fluid img-thumbnail rounded" style="max-height: 300px;">
+                            {% endif %}
+                            {% endfor %}
+                            {% endif %}
+                    </div>
+                    <div class="col-md-9">
+                        <strong class="mb-1">Veículo:</strong> {{ reservation.vehicle.brand }} {{
+                        reservation.vehicle.model }}<br>
+                        <strong class="mb-1">Recolha do veículo em:</strong> {{
+                        reservation.start_date.strftime('%d/%m/%Y') }} às {{
+                        reservation.start_time.strftime('%H:%M') }}<br>
+                        <strong class="mb-1">Devolução do veículo em:</strong> {{
+                        reservation.end_date.strftime('%d/%m/%Y') }} às {{
+                        reservation.end_time.strftime('%H:%M') }}<br>
+                        <strong class="mb-1">Duração total:</strong> {{ reservation.duration }} dia{% if
+                        reservation.duration > 0 %}s{%
+                        endif%}<br>
+                        <strong class="mb-1">Status:</strong> {{ reservation.status }}<br>
+                    </div>
+                </div>
             </li>
             {% endfor %}
         </ul>
