--- a/templates/client_reservations.html
+++ b/templates/client_reservations.html
@@ -31,6 +31,9 @@
                         endif%}<br>
                         <strong class="mb-1">Status:</strong> {{ reservation.status }}<br>
                     </div>
+                    <form method="POST" action="{{ url_for('cancel_reservation', id=reservation.id) }}">
+                        <button type="submit" class="btn btn-danger">Cancelar Reserva</button>
+                    </form>
                 </div>
             </li>
             {% endfor %}
