--- a/templates/order_confirmation.html
+++ b/templates/order_confirmation.html
@@ -1,10 +1,14 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-
 <div class="container mt-4">
-    <h1 class="mb-4">Confirmação de Pedido</h1>
-    <p>O seu pedido foi confirmado com sucesso! Aguarde a aprovação do pagamento para a reserva do veículo.</p>
+    <div class="row justify-content-center">
+        <div class="col-md-8 text-center">
+            <h2 class="mb-4">Confirmação de Pagamento</h2>
+            <p>A sua reserva foi processada com sucesso. O pagamento somente será processado no ato da recolha do veículo!
+                <br>Obrigado por escolher a Luxury Wheels!</p>
+            <a href="{{ url_for('client_reservations') }}" class="btn btn-primary">Ver Minhas Reservas</a>
+        </div>
+    </div>
 </div>
-
 {% endblock %}
