--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,30 @@
 {% extends 'base_admin.html' %}
 
 {% block content %}
-    <div class="container mt-4">
-        <h1>Login Administrador</h1>
-        <form method="post" class="mt-4">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-        </form>
+<!-- Adicionar a exibição de mensagens flash -->
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+<div class="container mt-4">
+    {% for message in messages %}
+    <div class="alert alert-{{ message[0] }}">
+        {{ message }}
     </div>
+    {% endfor %}
+</div>
+{% endif %}
+{% endwith %}
+<div class="container mt-4">
+    <h1>Login Administrador</h1>
+    <form method="post" class="mt-4">
+        <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username" name="username" required>
+        </div>
+        <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+</div>
 {% endblock %}
