--- a/templates/client_login.html
+++ b/templates/client_login.html
@@ -15,6 +15,7 @@
             <label for="password" class="form-label">Palavra-passe</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
+        <input type="hidden" name="next" value="{{ next_url }}">
         <button type="submit" class="btn btn-primary">Entrar</button>
     </form>
 </div>
